# pgbouncer-multicore-limit

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
analysis/: normalize.py  plots.py  summarize.py  tables.py  validate_runs.py
docs/: decision-log.md  experiment-design.md  run-log.md  runbook.md  troubleshooting.md
experiments/matrices/: cancellation.yaml  direct.yaml  discovery.yaml  fairness.yaml  focused-baseline.yaml  focused-main.yaml  focused-secondary.yaml  isolation.yaml  mixed.yaml  operations.yaml  pool-multiplication.yaml  scaling.yaml  smoke.yaml  tls.yaml
experiments/runner/: manifest.py  remote.py  runner.py  state.py  telegram.py  validation.py
experiments/scripts/: aws_operations.py  aws_run.py  emergency-stop.sh  estimate_cost.py
infra/ansible/: ansible.cfg  requirements.yml
infra/terraform/: .terraform.lock.hcl  compute.tf  main.tf  network.tf  outputs.tf  security.tf  storage.tf  terraform.tfvars.example  variables.tf
loadgen/: Cargo.toml  Dockerfile
loadgen/src/: api.rs  cancellation.rs  connections.rs  db.rs  export.rs  main.rs  metrics.rs  output.rs  scheduler.rs
monitoring/collectors/: clock.sh  host.sh  perf.sh  pgbouncer.py  pgbouncer.sh  postgres.py  postgres.sh  process.py
monitoring/queries/: postgres.sql
pgbouncer/: Dockerfile
pgbouncer/config/: base.ini.j2  topology.yaml  users.txt.j2
pgbouncer/scripts/: start-local.sh
pgbouncer/systemd/: pgbouncer@.service
postgres/: generate.sql  schema.sql  validate.sql  warm.sql
tests/: test_aws_access.py  test_aws_run.py  test_manifest.py
(+24 files in other folders)
