[project]
name = "pgbouncer-multicore-limit"
version = "0.1.0"
description = "Reproducible PgBouncer single-process and multicore scaling experiment"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansible-core>=2.21.1",
    "boto3>=1.43.46",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "tabulate>=0.10.0",
]
