[package]
name = "pgbouncer-loadgen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
hdrhistogram = "7.5.4"
native-tls = "0.2.18"
postgres-native-tls = "0.5.3"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
